welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:-9: error: ambiguous reference to overloaded definition,
both method isFacingTrail in class SlugTracking of type ()Boolean
and  method isFacingTrail in class SlugTracking of type ()Boolean
match argument types () and expected result type Boolean
			if (isFacingTrail()) {
                            ^SlugTracking:6: error: value update is not a member of java.awt.Color
    if (getCouleurSol() = Color.green) {
        ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while (!estSurBiscuit) { 
  ^SlugTracking:25: error: value update is not a member of java.awt.Color
  else if (getCouleurSol() = Color.green) {
           ^SlugTracking:25: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (getCouleurSol() = Color.green) {
       ^SlugTracking:21: error: method isFacingTrail is defined twice
  conflicting symbols both originated in file 'plm.runtime1.SlugTracking'
def isFacingTrail():Boolean = {
    ^